# android

./: .gitignore  .gitmodules  .npmrc  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CodingStyle.Cpp.xml  CodingStyle.Java.xml  README.md  SBG-testing-scenarios.docx  android_unit_test_results.xml  build-runtime.gradle  build.dev.sh  build.gradle  build.sh  gradle.properties  gruntfile.js  package.json  sonar-project.properties  v8-versions.json
test-app/runtime/: CMakeLists.txt  CMakeLists.txt.bak  build.gradle  consumer-rules.pro  gradle.properties
test-app/runtime/src/debug/java/com/tns/: ErrorReport.java  ErrorReportActivity.java  NativeScriptSyncService.java
test-app/runtime/src/debug/res/drawable/: button.xml  button_accented.xml
test-app/runtime/src/debug/res/layout/: error_activity.xml  exception_tab.xml  logcat_tab.xml
test-app/runtime/src/main/: AndroidManifest.xml  config.json
test-app/runtime/src/main/cpp/: ArgConverter.cpp  ArgConverter.h  ArrayBufferHelper.cpp  ArrayBufferHelper.h  ArrayElementAccessor.cpp  ArrayElementAccessor.h  ArrayHelper.cpp  AssetExtractor.cpp  CSSAgentImpl.cpp  CSSAgentImpl.h  CSSDomainCallbackHandlers.cpp  CSSDomainCallbackHandlers.h  CallbackHandlers.cpp  CallbackHandlers.h  ConcurrentQueue.cpp  ConcurrentQueue.h  Constants.cpp  Constants.h  DOMAgentImpl.cpp  DOMAgentImpl.h  DOMDomainCallbackHandlers.cpp  DOMDomainCallbackHandlers.h  DesugaredInterfaceCompanionClassNameResolver.cpp  DesugaredInterfaceCompanionClassNameResolver.h  DevFlags.cpp  DevFlags.h  ESModule.cpp  ESModule.h  FieldAccessor.cpp  FieldCallbackData.h  File.cpp  File.h  HMRSupport.cpp  HMRSupport.h  IsolateDisposer.cpp  IsolateDisposer.h  JEnv.cpp  JEnv.h  JSONObjectHelper.cpp  JSONObjectHelper.h  (+89 more)
test-app/runtime/src/main/cpp/ada/: LICENSE-APACHE  LICENSE-MIT  ada.cpp  ada.h
test-app/runtime/src/main/cpp/console/: Console.cpp  Console.h  console.js
test-app/runtime/src/main/cpp/conversions/: CastTypes.h  ConversionConsts.h  JNIArgRefsState.h  JSToJavaConverter.cpp  JSToJavaConverter.h
test-app/runtime/src/main/cpp/conversions/arrays/: JSToJavaArraysConverter.cpp  JSToJavaArraysConverter.h
test-app/runtime/src/main/cpp/conversions/objects/: JSToJavaObjectsConverter.cpp  JSToJavaObjectsConverter.h
test-app/runtime/src/main/cpp/conversions/primitives/: JSToJavaPrimitivesConverter.cpp  JSToJavaPrimitivesConverter.h
test-app/runtime/src/main/cpp/include/: V8NativeScriptExtension.h  prof.h  snapshot.h  v8-experimental.h  v8-inspector.h  v8-internal.h  v8-isolate.h  v8-platform.h  v8-profiler.h  v8-testing.h  v8-util.h  v8.h  v8config.h  zip.h  zipconf.h
test-app/runtime/src/main/cpp/include/inspector/: Debugger.h  Runtime.h  Schema.h
test-app/runtime/src/main/cpp/include/libc++/: __bsd_locale_fallbacks.h  __config  math.h  stddef.h  stdlib.h  string.h  wchar.h
test-app/runtime/src/main/cpp/include/libplatform/: libplatform.h  v8-tracing.h
test-app/runtime/src/main/cpp/snapshots/armeabi-v7a/: snapshot.cc
test-app/runtime/src/main/cpp/snapshots/x86/: snapshot.cc
test-app/runtime/src/main/cpp/utils/: InspectorCommon.cpp  InspectorCommon.h  NetworkRequestData.cpp  NetworkRequestData.h  PageResources.cpp  PageResources.h  SearchUtilsPublic.h
test-app/runtime/src/main/cpp/v8_inspector/: Utils.cpp  Utils.h  ns-v8-tracing-agent-impl.cpp  ns-v8-tracing-agent-impl.h
test-app/runtime/src/main/cpp/v8_inspector/builtins-generated/: bytecodes-builtins-list.h
test-app/runtime/src/main/cpp/v8_inspector/src/: allocation.h  char-predicates.h  conversions.h  flag-definitions.h  flags.h  globals.h  list.h  splay-tree.h  unicode-cache.h  unicode-decoder.h  unicode.h  utils.h  v8.h  v8memory.h  vector.h
test-app/runtime/src/main/cpp/v8_inspector/torque-generated/: bit-fields.h  builtin-definitions.h  class-debug-readers.cc  class-debug-readers.h  class-forward-declarations.h  class-verifiers.cc  class-verifiers.h  csa-types.h  debug-macros.cc  debug-macros.h  enum-verifiers.cc  exported-macros-assembler.cc  exported-macros-assembler.h  factory.cc  factory.inc  field-offsets.h  instance-types.h  interface-descriptors.inc  objects-body-descriptors-inl.inc  objects-printer.cc
test-app/runtime/src/main/java/com/tns/: AndroidJsV8Inspector.java  AppConfig.java  AssetExtractor.java  ClassResolver.java  DexFactory.java  DynamicConfiguration.java  EqualityComparator.java  ExtractPolicy.java  FileSystem.java  GcListener.java  LogcatLogger.java  ManualInstrumentation.java  MarkingMode.java  MessageType.java  MethodResolver.java  Module.java  NativeScriptAbstractMap.java  NativeScriptActivity.java  NativeScriptException.java  NativeScriptHashMap.java  NativeScriptWeakHashMap.java  Objects.java  Runtime.java  RuntimeHelper.java  RuntimeNativeFast.java  ThreadScheduler.java  TimerHandler.java  TypeIDs.java  Util.java
test-app/runtime/src/main/java/org/nativescript/: Bootstrap.java  NativeScriptActivity.java  NativeScriptApplication.java  NativeScriptFragment.java
test-app/runtime/src/main/jni/: Application.mk
test-app/runtime/src/main/jni/inspector/jni/: Android.mk  JsV8InspectorClient.cpp
test-app/runtime/src/main/jni/nativescript/jni/: Android.mk  ArrayBufferHelper.cpp  ArrayElementAccessor.cpp  ArrayElementAccessor.h  AssetExtractor.cpp  AssetExtractor.h  DirectBuffer.h  FieldAccessor.cpp  JEnv.cpp  JEnv.h  JSONObjectHelper.cpp  JType.cpp  JniLocalRef.h  JsArgConverter.h  JsArgToArrayConverter.h  ManualInstrumentation.cpp  ManualInstrumentation.h  MetadataFieldInfo.h  MetadataNode.cpp  MetadataNode.h  MetadataReader.h  NativeScriptAssert.h  NativeScriptException.cpp  NativeScriptException.h  NumericCasts.cpp  NumericCasts.h  ObjectManager.h  Profiler.h  ReadWriteLock.h  SimpleAllocator.h  SimpleProfiler.cpp  V8StringConstants.cpp  Version.h  WeakRef.cpp  com_tns_Runtime.cpp
test-app/runtime/src/main/libs/arm64-v8a/include/: snapshot_blob.h
test-app/runtime/src/main/libs/armeabi-v7a/include/: natives_blob.h  snapshot_blob.h
test-app/runtime/src/main/libs/x86/include/: natives_blob.h  (+1 more)
test-app/runtime/src/main/res/layout/: main.xml
(+2967 files in other folders)
